cmake_minimum_required(VERSION 3.15)
project(imooc)

set(CMAKE_CXX_STANDARD 11)

include(01/CMakeLists.txt)
include(02/CMakeLists.txt)
include(03/CMakeLists.txt)
include(04/CMakeLists.txt)
include(05/CMakeLists.txt)
include(06/CMakeLists.txt)
include(07/CMakeLists.txt)
include(08/CMakeLists.txt)

#add_executable(imooc main.cpp 01/main.cpp)
#target_link_libraries(imooc SDL2)